--- a/custom_components/youfone_be/manifest.json
+++ b/custom_components/youfone_be/manifest.json
@@ -4,8 +4,9 @@
   "dependencies": [],
   "documentation": "https://github.com/myTselection/youfone_be",
   "domain": "youfone_be",
-  "iot_class": "Cloud Polling",
+  "iot_class": "cloud_polling",
   "name": "Youfone.be",
   "requirements": ["beautifulsoup4", "html5lib"],
   "version": "0.0.2"
+  "issue_tracker": "https://github.com/myTselection/youfone_be/issues"
 }
