--- a/custom_components/youfone_be/manifest.json
+++ b/custom_components/youfone_be/manifest.json
@@ -7,6 +7,6 @@
   "iot_class": "cloud_polling",
   "name": "Youfone.be",
   "requirements": ["beautifulsoup4", "html5lib"],
-  "version": "0.0.2"
+  "version": "0.0.2",
   "issue_tracker": "https://github.com/myTselection/youfone_be/issues"
 }
