--- a/custom_components/youfone_be/manifest.json
+++ b/custom_components/youfone_be/manifest.json
@@ -8,5 +8,6 @@
   "name": "Youfone.be",
   "requirements": ["beautifulsoup4", "html5lib"],
   "version": "0.0.2",
-  "issue_tracker": "https://github.com/myTselection/youfone_be/issues"
+  "issue_tracker": "https://github.com/myTselection/youfone_be/issues",
+  "integration_type": "entity"
 }
