--- a/custom_components/youfone_be/manifest.json
+++ b/custom_components/youfone_be/manifest.json
@@ -9,5 +9,5 @@
   "requirements": ["beautifulsoup4", "html5lib"],
   "version": "0.0.2",
   "issue_tracker": "https://github.com/myTselection/youfone_be/issues",
-  "integration_type": "entity"
+  "integration_type": "hub"
 }
