--- a/custom_components/youfone_be/manifest.json
+++ b/custom_components/youfone_be/manifest.json
@@ -6,8 +6,8 @@
   "domain": "youfone_be",
   "iot_class": "cloud_polling",
   "name": "Youfone.be",
-  "requirements": ["beautifulsoup4", "html5lib"],
-  "version": "1.1.3",
+  "requirements": [],
+  "version": "1.2.0",
   "issue_tracker": "https://github.com/myTselection/youfone_be/issues",
   "integration_type": "hub"
 }
