--- a/custom_components/youfone_be/manifest.json
+++ b/custom_components/youfone_be/manifest.json
@@ -1,13 +1,13 @@
 {
+  "domain": "youfone_be",
+  "name": "Youfone.be",
   "codeowners": ["@myTselection"],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/myTselection/youfone_be",
-  "domain": "youfone_be",
+  "integration_type": "hub",
   "iot_class": "cloud_polling",
-  "name": "Youfone.be",
-  "requirements": [],
-  "version": "2.0.1",
   "issue_tracker": "https://github.com/myTselection/youfone_be/issues",
-  "integration_type": "hub"
+  "requirements": [],
+  "version": "2.0.2"
 }
